hphp/hack/test/typecheck/suspend_outside_of_coroutines4.php.exp
File "suspend_outside_of_coroutines4.php", line 6, characters 8-19:
suspend is only allowed in coroutines. (NastCheck[3038])
